# cap

./: Cargo.toml  README.md
src/: cargo.rs  crates.rs  helper.rs  local_crates.rs  main.rs  package_installer.rs  package_updater.rs
src/crates/: crates_io.rs  crates_registry.rs
src/helper/: pluralize.rs
src/local_crates/: binary_invocation_scraper.rs  cargo_metadata_scraper.rs  package.rs  package_executable.rs  package_key.rs  package_tree.rs  scraper.rs
