[package]
name = "capm"
version = "0.7.0"
edition = "2021"
description = "A CLI tool to manage your binary crates"
authors = ["Marco Quinten <splittydev@pm.me>"]
license = "MIT"
repository = "https://github.com/splittydev/cap"

[[bin]]
name = "cap"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4.1", features = ["derive"] }
crates-index = { version = "2", features = ["parallel", "git-performance", "git-https"] }
crates-io = "0.38"
curl = "0.4"
home = "0.5"
indicatif = "0.17"
log = "0.4"
owo-colors = "3.5"
rayon = "1.7"
regex = "1.7"
semver = "1"
serde = { version = "1", features = ["derive"] }
termion = "2"
textwrap = "0.16"
toml = "0.7"
